--- a/style.css
+++ b/style.css
@@ -11,6 +11,7 @@ html, body {
   --color-accent: #0a84ff;
   --color-gray01: #AFAFAF;
   --color-gray02: #DDD;
+  --color-gray03: #6A6A6A;
 }
 
 
@@ -32,6 +33,7 @@ body {
 @media (min-width: 375px) {
   body{
     max-width: 375px;
+    padding-top: 60px;
   }
   h3 {
     margin: 0;
@@ -42,9 +44,17 @@ body {
     padding: 15px;
     width: 100%;
   }
+  header{
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    width: 100%;
+  }
   .site-header {
     background: var(--color-bg);
     width: 100%;
+    /* position: static; */
     
   }
   .header-row {
@@ -167,5 +177,46 @@ body {
     padding: 7.5px 10px;
     padding-left: 35px;
   }
-  
+  .content-section{
+    margin: 20px;
+        /* padding:  20px; */
+
+  }
+  .content{
+
+    border-bottom: 1px solid var(--color-gray02);
+
+  }
+  .content h1{
+    font-size: 45px;
+    color: #000;
+    margin-bottom: 0;
+  }
+  .content span{
+    color: var(--color-gray03);
+    font-size: 18px;
+  }
+  .content p {
+    /* width: auto; */
+    margin-top: 15px;
+    font-size: 16px;
+  }
+  .content p.bold-text{
+    padding-top: 25px;
+    margin-top: 10px;
+  }
+  .liked-section{
+    display: flex;
+    justify-content: space-between;
+    padding: 15px;
+  }
+  .liked-section span{
+    width: 40%;
+    text-align: center;
+  }
+  .like,.dislike{
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+  }
 }
